[package]
name = "danielek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
crossbeam = "0.8.2"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.26"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", features = ["serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
