[package]
name = "danielek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
derive_builder = "0.12.0"
display_json = "0.2.1"
dotenv = "0.15.0"
#env_logger = "0.10.0"
futures-util = "0.3.26"
ijson = "0.1.3"
iso8601-timestamp = "0.2.10"
lazy-regex = "2.4.1"
log = "0.4.17"
mimalloc = { version = "0.1.37", default-features = false }
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
simplelog = "0.12.1"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
